Update links, add TAAS'20.

--- a/_pages/publications/2009-ICAC.md
+++ b/_pages/publications/2009-ICAC.md
@@ -9,14 +9,7 @@ Thomas Vogel, Stefan Neumann, Stephan Hildebrandt, Holger Giese, and Basil Becke
 
 ## Links
 * [Open access version](https://arxiv.org/abs/1805.08677){:target="_blank"}
-<ul><li>
-<!-- ACM DL Article: Model-driven architectural monitoring and adaptation for autonomic systems -->
-<!-- <div class="acmdlitem" id="item1555249"> -->
-<a href="https://dl.acm.org/authorize?N96418" title="Model-driven architectural monitoring and adaptation for autonomic systems">Free copy by the ACM DL Author-ize service</a>
-<img src="http://dl.acm.org/images/oa.gif" width="25" height="25" border="0" alt="ACM DL Author-ize service" style="vertical-align:middle"/>
-<!-- </div> -->
-</li></ul>
-* [Article at ACM DL](https://doi.org/10.1145/1555228.1555249){:target="_blank"}
+* [Paper at ACM DL](https://doi.org/10.1145/1555228.1555249){:target="_blank"}
 
 ## Abstract
 Architectural monitoring and adaptation allows self-management capabilities of autonomic systems to realize more powerful adaptation steps, which observe and adjust not only parameters but also the software architecture. However, monitoring as well as adaptation of the architecture of a running system in addition to the parameters are considerably more complex and only rather limited and costly solutions are available today. In this paper we propose a model-driven approach to ease the development of architectural monitoring and adaptation for autonomic systems. Using meta models and model transformation techniques, we were able to realize an incremental synchronization between the run-time system and models for different self-management activities. The synchronization might be triggered when needed and therefore the activities can operate concurrently.
