--- a/_pages/publications/2012-MISE.md
+++ b/_pages/publications/2012-MISE.md
@@ -8,7 +8,7 @@ layout: page
 Thomas Vogel and Holger Giese. "Requirements and Assessment of Languages and Frameworks for Adaptation Models". In: Models in Software Engineering, Workshops and Symposia at MoDELS 2011, Reports and Revised Selected Papers. Ed. by Jörg Kienzle. Vol. 7167. Lecture Notes in Computer Science (LNCS). Springer, 2012, pp. 167--182. DOI: 10.1007/978-3-642-29645-1\_18
 
 ## Links
-* [Open access Version](https://arxiv.org/abs/1805.08679){:target="_blank"}
+* [Open access version](https://arxiv.org/abs/1805.08679){:target="_blank"}
 * [Paper at SpringerLink](https://doi.org/10.1007/978-3-642-29645-1_18){:target="_blank"}
 
 ## Abstract
