Add SEAMS'20 papers, and SeAC'20 and CyRA'20 PC, update TAAS articles.

--- a/_pages/publications/2014-TAAS.md
+++ b/_pages/publications/2014-TAAS.md
@@ -5,7 +5,7 @@ layout: page
 ---
 
 ## Reference
-Thomas Vogel and Holger Giese. "Model-Driven Engineering of Self-Adaptive Software with EUREMA". In: ACM Trans. Auton. Adapt. Syst. 8.4 (2014), 18:1--18:33. DOI: 10.1145/2555612
+Thomas Vogel and Holger Giese. "Model-Driven Engineering of Self-Adaptive Software with EUREMA". In: ACM Transactions on Autonomous and Adaptive Systems 8.4 (2014), 18:1--18:33. DOI: 10.1145/2555612
 
 ## Links
 * [Open access version](https://arxiv.org/abs/1805.07353){:target="_blank"}
@@ -22,7 +22,7 @@ The development of self-adaptive software requires the engineering of an adaptat
     author = {Vogel, Thomas and Giese, Holger},
     title = {Model-Driven Engineering of Self-Adaptive Software with {EUREMA}},
     year = {2014},
-    journal = {ACM Trans. Auton. Adapt. Syst.},
+    journal = {ACM Transactions on Autonomous and Adaptive Systems},
     volume = {8},
     number = {4},
     pages = {18:1--18:33},
