--- a/_pages/publications/2020-TAAS.md
+++ b/_pages/publications/2020-TAAS.md
@@ -5,14 +5,15 @@ layout: page
 ---
 
 ## Reference
-* Sona Ghahremani, Holger Giese, and Thomas Vogel. "Improving Scalability and Reward of Utility-Driven Self-Healing for Large Dynamic Architectures". In: ACM Trans. Auton. Adapt. Syst. (2020), (_accepted_).
+* Sona Ghahremani, Holger Giese, and Thomas Vogel. "Improving Scalability and Reward of Utility-Driven Self-Healing for Large Dynamic Architectures". In: ACM Transactions on Autonomous and Adaptive Systems 14.3 (2020), 12:1–12:41. doi: 10.1145/3380965.
 
 
 ## Links
-_tba_
+* [Article at ACM DL](https://doi.org/10.1145/3380965){:target="_blank"}
+
 
 ## Abstract
-Self-adaptation can be realized in various ways. Rule-based approaches prescribe the adaptation to be executed if the system or environment satisfy certain conditions. They result in scalable solutions but often with merely satisfying adaptation decisions. In contrast, utility-driven approaches determine optimal decisions by using an often costly optimization, which typically does not scale for large problems. We propose a rule-based and utility-driven adaptation scheme that achieves the benefits of both directions such that the adaptation decisions are optimal while the computation scales by avoiding an expensive optimization. We use this adaptation scheme for architecture-based self-healing of large software systems. For this purpose, we define the utility for large dynamic architectures of such systems based on patterns that define issues the self-healing must address. Moreover, we use pattern-based adaptation rules to resolve these issues. Using a pattern-based scheme to define the utility and adaptation rules allows us to compute the impact of each rule application on the overall utility and to realize an incremental and efficient utility-driven self-healing. In addition to formally analyzing the computational effort and optimality of the proposed scheme, we thoroughly demonstrate its scalability and optimality in terms of reward in comparative experiments with a static rule-based approach as a baseline and a utility-driven approach using a constraint solver. These experiments are based on different failure profiles derived from real-world failure logs. We also investigate the impact of different failure profile characteristics on the scalability and reward to evaluate the robustness of the different approaches.
+Self-adaptation can be realized in various ways. Rule-based approaches prescribe the adaptation to be executed if the system or environment satisfies certain conditions. They result in scalable solutions but often with merely satisfying adaptation decisions. In contrast, utility-driven approaches determine optimal decisions by using an often costly optimization, which typically does not scale for large problems. We propose a rule-based and utility-driven adaptation scheme that achieves the benefits of both directions such that the adaptation decisions are optimal, whereas the computation scales by avoiding an expensive optimization. We use this adaptation scheme for architecture-based self-healing of large software systems. For this purpose, we define the utility for large dynamic architectures of such systems based on patterns that define issues the self-healing must address. Moreover, we use pattern-based adaptation rules to resolve these issues. Using a pattern-based scheme to define the utility and adaptation rules allows us to compute the impact of each rule application on the overall utility and to realize an incremental and efficient utility-driven self-healing. In addition to formally analyzing the computational effort and optimality of the proposed scheme, we thoroughly demonstrate its scalability and optimality in terms of reward in comparative experiments with a static rule-based approach as a baseline and a utility-driven approach using a constraint solver. These experiments are based on different failure profiles derived from real-world failure logs. We also investigate the impact of different failure profile characteristics on the scalability and reward to evaluate the robustness of the different approaches.
 
 ## BibTeX
 
@@ -21,11 +22,12 @@ Self-adaptation can be realized in various ways. Rule-based approaches prescribe
    author = {Ghahremani, Sona and Giese, Holger and Vogel, Thomas},
    title = {Improving Scalability and Reward of Utility-Driven Self-Healing for Large Dynamic Architectures},
    year = {2020},
-   journal = {ACM Trans. Auton. Adapt. Syst.},
-   volume = {},
-   number = {},
-   pages = {},
-   doi = {},
-   note = {(accepted)},
+   journal = {ACM Transactions on Autonomous and Adaptive Systems},
+   volume = {14},
+   number = {3},
+   pages = {12:1--12:41},
+   articleno = {Article 12},
+   numpages = {41},
+   doi = {10.1145/3380965},
 }</pre>
 </div>
