--- a/_pages/publications/2017-TAAS.md
+++ b/_pages/publications/2017-TAAS.md
@@ -5,7 +5,7 @@ layout: page
 ---
 
 ## Reference
-Antonio Filieri, Martina Maggio, Konstantinos Angelopoulos, Nicolás D’ippolito, Ilias Gerostathopoulos, Andreas Berndt Hempel, Henry Hoffmann, Pooyan Jamshidi, Evangelia Kalyvianaki, Cristian Klein, Filip Krikava, Sasa Misailovic, Alessandro V. Papadopoulos, Suprio Ray, Amir M. Sharifloo, Stepan Shevtsov, Mateusz Ujma, and Thomas Vogel. "Control Strategies for Self-Adaptive Software Systems". In: ACM Trans. Auton. Adapt. Syst. 11.4 (2017), 24:1--24:31. DOI: 10.1145/3024188
+Antonio Filieri, Martina Maggio, Konstantinos Angelopoulos, Nicolás D’ippolito, Ilias Gerostathopoulos, Andreas Berndt Hempel, Henry Hoffmann, Pooyan Jamshidi, Evangelia Kalyvianaki, Cristian Klein, Filip Krikava, Sasa Misailovic, Alessandro V. Papadopoulos, Suprio Ray, Amir M. Sharifloo, Stepan Shevtsov, Mateusz Ujma, and Thomas Vogel. "Control Strategies for Self-Adaptive Software Systems". In: ACM Transactions on Autonomous and Adaptive Systems 11.4 (2017), 24:1--24:31. DOI: 10.1145/3024188
 
 ## Links
 * [Open access version](https://zenodo.org/record/1245483){:target="_blank"}
@@ -21,7 +21,7 @@ The pervasiveness and growing complexity of software systems are challenging sof
    author = {Filieri, Antonio and Maggio, Martina and Angelopoulos, Konstantinos and D’Ippolito, Nicolas and Gerostathopoulos, Ilias and Hempel, Andreas Berndt and Hoffmann, Henry and Jamshidi, Pooyan and Kalyvianaki, Evangelia and Klein, Cristian and Krikava, Filip and Misailovic, Sasa and Papadopoulos, Alessandro Vittorio and Ray, Suprio and Sharifloo, Amir M. and Shevtsov, Stepan and Ujma, Mateusz and Vogel, Thomas},
    title = {Control Strategies for Self-Adaptive Software Systems},
    year = {2017},
-   journal = {ACM Trans. Auton. Adapt. Syst.},
+   journal = {ACM Transactions on Autonomous and Adaptive Systems},
    volume = {11},
    number = {4},
    pages = {24:1--24:31},
