Add pre-prints to SEAMS'20 papers and change format of TAAS'20 paper page.

--- a/_pages/publications/2020-TAAS.md
+++ b/_pages/publications/2020-TAAS.md
@@ -5,7 +5,7 @@ layout: page
 ---
 
 ## Reference
-* Sona Ghahremani, Holger Giese, and Thomas Vogel. "Improving Scalability and Reward of Utility-Driven Self-Healing for Large Dynamic Architectures". In: ACM Transactions on Autonomous and Adaptive Systems 14.3 (2020), 12:1–12:41. doi: 10.1145/3380965.
+Sona Ghahremani, Holger Giese, and Thomas Vogel. "Improving Scalability and Reward of Utility-Driven Self-Healing for Large Dynamic Architectures". In: ACM Transactions on Autonomous and Adaptive Systems 14.3 (2020), 12:1–12:41. DOI: 10.1145/3380965.
 
 
 ## Links
