Add link to arxiv preprint of TAAS'20.

--- a/_pages/publications/2020-TAAS.md
+++ b/_pages/publications/2020-TAAS.md
@@ -9,6 +9,7 @@ Sona Ghahremani, Holger Giese, and Thomas Vogel. "Improving Scalability and Rewa
 
 
 ## Links
+* [Open access version](https://arxiv.org/abs/2005.11180){:target="_blank"}
 * [Article at ACM DL](https://doi.org/10.1145/3380965){:target="_blank"}
 
 
