Add IST 2020 article.

--- a/_pages/publications/2020-IST.md
+++ b/_pages/publications/2020-IST.md
@@ -8,7 +8,6 @@ layout: page
 Thomas Vogel, Chinh Tran, and Lars Grunske. "A Comprehensive Empirical Evaluation of Generating Test Suites for Mobile Applications with Diversity". In: Information and Software Technology (2020). _(in print)_.
 
 
-
 ## Links
 _tba_
 
@@ -18,9 +17,9 @@ _Context:_ In search-based software engineering we often use popular heuristics 
 
 _Objective:_ We want to achieve better results in generating test suites with <span style="font-variant:small-caps;">Sapienz</span> while avoiding trial-and-error experiments to identify a more suitable configuration of <span style="font-variant:small-caps;">Sapienz</span>.
 
-_Method:_ We conducted a fitness landscape analysis of <span style="font-variant:small-caps;">Sapienz</span> to analytically understand the search problem, which allowed us to make informed decisions about the heuristic and configuration of <span style="font-variant:small-caps;">Sapienz</span> when developing <span style="font-variant:small-caps;">Sapienz</span>^div^. We comprehensively evaluated <span style="font-variant:small-caps;">Sapienz</span><sup>div</sup> in a head-to-head comparison with <span style="font-variant:small-caps;">Sapienz</span> on 34 apps.
+_Method:_ We conducted a fitness landscape analysis of <span style="font-variant:small-caps;">Sapienz</span> to analytically understand the search problem, which allowed us to make informed decisions about the heuristic and configuration of <span style="font-variant:small-caps;">Sapienz</span> when developing <span style="font-variant:small-caps;">Sapienz</span><span style="font-style: italic;font-size:70%;vertical-align:super;">div</span>. We comprehensively evaluated <span style="font-variant:small-caps;">Sapienz</span><span style="font-style: italic;font-size:70%;vertical-align:super;">div</span> in a head-to-head comparison with <span style="font-variant:small-caps;">Sapienz</span> on 34 apps.
 
-_Results:_ Analyzing the fitness landscape of <span style="font-variant:small-caps;">Sapienz</span>, we observed a lack of diversity of the evolved test suites and a stagnation of the search after 25 generations. <span style="font-variant:small-caps;">Sapienz</span><sup>div</sup> realizes mechanisms that preserve the diversity of the test suites being evolved. The evaluation showed that <span style="font-variant:small-caps;">Sapienz</span><sup>div</sup> achieves better or at least similar test results than <span style="font-variant:small-caps;">Sapienz</span> concerning coverage and the number of revealed faults. However, <span style="font-variant:small-caps;">Sapienz</span><sup>div</sup> typically produces longer test sequences and requires more execution time than <span style="font-variant:small-caps;">Sapienz</span>.
+_Results:_ Analyzing the fitness landscape of <span style="font-variant:small-caps;">Sapienz</span>, we observed a lack of diversity of the evolved test suites and a stagnation of the search after 25 generations. <span style="font-variant:small-caps;">Sapienz</span><span style="font-style: italic;font-size:70%;vertical-align:super;">div</span> realizes mechanisms that preserve the diversity of the test suites being evolved. The evaluation showed that <span style="font-variant:small-caps;">Sapienz</span><span style="font-style: italic;font-size:70%;vertical-align:super;">div</span> achieves better or at least similar test results than <span style="font-variant:small-caps;">Sapienz</span> concerning coverage and the number of revealed faults. However, <span style="font-variant:small-caps;">Sapienz</span><span style="font-style: italic;font-size:70%;vertical-align:super;">div</span> typically produces longer test sequences and requires more execution time than <span style="font-variant:small-caps;">Sapienz</span>.
 
 _Conclusions:_ The understanding of the search problem obtained by the fitness landscape analysis helped us to find a more suitable configuration of <span style="font-variant:small-caps;">Sapienz</span> without trial-and-error experiments. By promoting diversity of test suites during the search, improved or at least similar test results in terms of faults and coverage can be achieved.
 
