Add link to IST 2020 article.

--- a/_pages/publications/2020-IST.md
+++ b/_pages/publications/2020-IST.md
@@ -5,23 +5,19 @@ layout: page
 ---
 
 ## Reference
-Thomas Vogel, Chinh Tran, and Lars Grunske. "A Comprehensive Empirical Evaluation of Generating Test Suites for Mobile Applications with Diversity". In: Information and Software Technology (2020). _(in print)_.
+Thomas Vogel, Chinh Tran, and Lars Grunske. "A Comprehensive Empirical Evaluation of Generating Test Suites for Mobile Applications with Diversity". In: Information and Software Technology (2020). DOI: 10.1016/j.infsof.2020.106436. _(in print, available online)_.
 
 
 ## Links
-_tba_
+* [Paper at ScienceDirect](https://doi.org/10.1016/j.infsof.2020.106436){:target="_blank"}
 
 
 ## Abstract
-_Context:_ In search-based software engineering we often use popular heuristics with default configurations, which typically lead to suboptimal results, or we perform experiments to identify configurations on a trial-and-error basis, which may lead to better results for a specific problem. We consider the problem of generating test suites for mobile applications (apps) and rely on <span style="font-variant:small-caps;">Sapienz</span>, a state-of-the-art approach to this problem that uses a popular heuristic (NSGA-II) with a default configuration.
-
-_Objective:_ We want to achieve better results in generating test suites with <span style="font-variant:small-caps;">Sapienz</span> while avoiding trial-and-error experiments to identify a more suitable configuration of <span style="font-variant:small-caps;">Sapienz</span>.
-
-_Method:_ We conducted a fitness landscape analysis of <span style="font-variant:small-caps;">Sapienz</span> to analytically understand the search problem, which allowed us to make informed decisions about the heuristic and configuration of <span style="font-variant:small-caps;">Sapienz</span> when developing <span style="font-variant:small-caps;">Sapienz</span><span style="font-style: italic;font-size:70%;vertical-align:super;">div</span>. We comprehensively evaluated <span style="font-variant:small-caps;">Sapienz</span><span style="font-style: italic;font-size:70%;vertical-align:super;">div</span> in a head-to-head comparison with <span style="font-variant:small-caps;">Sapienz</span> on 34 apps.
-
-_Results:_ Analyzing the fitness landscape of <span style="font-variant:small-caps;">Sapienz</span>, we observed a lack of diversity of the evolved test suites and a stagnation of the search after 25 generations. <span style="font-variant:small-caps;">Sapienz</span><span style="font-style: italic;font-size:70%;vertical-align:super;">div</span> realizes mechanisms that preserve the diversity of the test suites being evolved. The evaluation showed that <span style="font-variant:small-caps;">Sapienz</span><span style="font-style: italic;font-size:70%;vertical-align:super;">div</span> achieves better or at least similar test results than <span style="font-variant:small-caps;">Sapienz</span> concerning coverage and the number of revealed faults. However, <span style="font-variant:small-caps;">Sapienz</span><span style="font-style: italic;font-size:70%;vertical-align:super;">div</span> typically produces longer test sequences and requires more execution time than <span style="font-variant:small-caps;">Sapienz</span>.
-
-_Conclusions:_ The understanding of the search problem obtained by the fitness landscape analysis helped us to find a more suitable configuration of <span style="font-variant:small-caps;">Sapienz</span> without trial-and-error experiments. By promoting diversity of test suites during the search, improved or at least similar test results in terms of faults and coverage can be achieved.
+**Context:** In search-based software engineering we often use popular heuristics with default configurations, which typically lead to suboptimal results, or we perform experiments to identify configurations on a trial-and-error basis, which may lead to better results for a specific problem. We consider the problem of generating test suites for mobile applications (apps) and rely on <span style="font-variant:small-caps;">Sapienz</span>, a state-of-the-art approach to this problem that uses a popular heuristic (NSGA-II) with a default configuration.
+**Objective:** We want to achieve better results in generating test suites with <span style="font-variant:small-caps;">Sapienz</span> while avoiding trial-and-error experiments to identify a more suitable configuration of <span style="font-variant:small-caps;">Sapienz</span>.
+**Method:** We conducted a fitness landscape analysis of <span style="font-variant:small-caps;">Sapienz</span> to analytically understand the search problem, which allowed us to make informed decisions about the heuristic and configuration of <span style="font-variant:small-caps;">Sapienz</span> when developing <span style="font-variant:small-caps;">Sapienz</span><span style="font-style: italic;font-size:70%;vertical-align:super;">div</span>. We comprehensively evaluated <span style="font-variant:small-caps;">Sapienz</span><span style="font-style: italic;font-size:70%;vertical-align:super;">div</span> in a head-to-head comparison with <span style="font-variant:small-caps;">Sapienz</span> on 34 apps.
+**Results:** Analyzing the fitness landscape of <span style="font-variant:small-caps;">Sapienz</span>, we observed a lack of diversity of the evolved test suites and a stagnation of the search after 25 generations. <span style="font-variant:small-caps;">Sapienz</span><span style="font-style: italic;font-size:70%;vertical-align:super;">div</span> realizes mechanisms that preserve the diversity of the test suites being evolved. The evaluation showed that <span style="font-variant:small-caps;">Sapienz</span><span style="font-style: italic;font-size:70%;vertical-align:super;">div</span> achieves better or at least similar test results than <span style="font-variant:small-caps;">Sapienz</span> concerning coverage and the number of revealed faults. However, <span style="font-variant:small-caps;">Sapienz</span><span style="font-style: italic;font-size:70%;vertical-align:super;">div</span> typically produces longer test sequences and requires more execution time than <span style="font-variant:small-caps;">Sapienz</span>.
+**Conclusions:** The understanding of the search problem obtained by the fitness landscape analysis helped us to find a more suitable configuration of <span style="font-variant:small-caps;">Sapienz</span> without trial-and-error experiments. By promoting diversity of test suites during the search, improved or at least similar test results in terms of faults and coverage can be achieved.
 
 
 ## BibTeX
@@ -35,9 +31,9 @@ _Conclusions:_ The understanding of the search problem obtained by the fitness l
   number = {},
   year = {2020},
   pages = {},
-  doi = {},
+  doi = {10.1016/j.infsof.2020.106436},
   numpages = {},
   publisher = {Elsevier},
-  note = {(in print)},
+  note = {(In print. Available online 25 September 2020)},
 }</pre>
 </div>
