--- a/_pages/publications/2020-IST.md
+++ b/_pages/publications/2020-IST.md
@@ -5,10 +5,11 @@ layout: page
 ---
 
 ## Reference
-Thomas Vogel, Chinh Tran, and Lars Grunske. "A Comprehensive Empirical Evaluation of Generating Test Suites for Mobile Applications with Diversity". In: Information and Software Technology (2020). DOI: 10.1016/j.infsof.2020.106436. _(in print, available online)_.
+Thomas Vogel, Chinh Tran, and Lars Grunske. "A Comprehensive Empirical Evaluation of Generating Test Suites for Mobile Applications with Diversity". In: Information and Software Technology (2021). DOI: 10.1016/j.infsof.2020.106436. _(Available online 25 September 2020)_.
 
 
 ## Links
+* [Accepted Manuscript (open access)](https://arxiv.org/abs/2012.14237){:target="_blank"}
 * [Paper at ScienceDirect](https://doi.org/10.1016/j.infsof.2020.106436){:target="_blank"}
 
 
@@ -27,12 +28,11 @@ Thomas Vogel, Chinh Tran, and Lars Grunske. "A Comprehensive Empirical Evaluatio
   author = {Vogel, Thomas and Tran, Chinh and Grunske, Lars},
   title = {A Comprehensive Empirical Evaluation of Generating Test Suites for Mobile Applications with Diversity},
   journal = {Information and Software Technology},
-  volume = {},
-  number = {},
-  year = {2020},
-  pages = {},
+  volume = {130},
+  year = {2021},
+  pages = {106436},
   doi = {10.1016/j.infsof.2020.106436},
   publisher = {Elsevier},
-  note = {(In print. Available online 25 September 2020)},
+  note = {(Available online 25 September 2020)},
 }</pre>
 </div>
