Add link to video.

--- a/_pages/publications/2020-IST.md
+++ b/_pages/publications/2020-IST.md
@@ -11,7 +11,9 @@ Thomas Vogel, Chinh Tran, and Lars Grunske. "A Comprehensive Empirical Evaluatio
 ## Links
 * [Accepted Manuscript (open access)](https://arxiv.org/abs/2012.14237){:target="_blank"}
 * [Paper at ScienceDirect](https://doi.org/10.1016/j.infsof.2020.106436){:target="_blank"}
+* [Video of a related presentation](https://www.tele-task.de/lecture/video/7788/){:target="_blank"}
 
+<a href="https://www.tele-task.de/lecture/video/7788/" target="_blank"><img src="/assets/img/2019-FutureSOC-Video.png" alt="Video of the talk Search-Based App Testing, Fitness Landscape Analysis, and Diversity" style="width: 40%; margin-top: 1em; margin-left: 1em;"/></a>
 
 ## Abstract
 **Context:** In search-based software engineering we often use popular heuristics with default configurations, which typically lead to suboptimal results, or we perform experiments to identify configurations on a trial-and-error basis, which may lead to better results for a specific problem. We consider the problem of generating test suites for mobile applications (apps) and rely on <span style="font-variant:small-caps;">Sapienz</span>, a state-of-the-art approach to this problem that uses a popular heuristic (NSGA-II) with a default configuration.
