Add IST 2022 papers, update 2021 IST paper.

--- a/_pages/publications/2020-IST.md
+++ b/_pages/publications/2020-IST.md
@@ -5,8 +5,7 @@ layout: page
 ---
 
 ## Reference
-Thomas Vogel, Chinh Tran, and Lars Grunske. "A Comprehensive Empirical Evaluation of Generating Test Suites for Mobile Applications with Diversity". In: Information and Software Technology (2021). DOI: 10.1016/j.infsof.2020.106436. _(Available online 25 September 2020)_.
-
+Thomas Vogel, Chinh Tran, and Lars Grunske. "A Comprehensive Empirical Evaluation of Generating Test Suites for Mobile Applications with Diversity". In: Information and Software Technology 130 (2021), p. 106436. DOI: 10.1016/j.infsof.2020.106436. _(Available online 25 September 2020)_.
 
 ## Links
 * [Accepted Manuscript (open access)](https://arxiv.org/abs/2012.14237){:target="_blank"}
