--- a/_pages/publications/2022-ISTa.md
+++ b/_pages/publications/2022-ISTa.md
@@ -9,6 +9,7 @@ Arut Prakash Kaleeswaran, Arne Nordmann, Thomas Vogel, and Lars Grunske. "A Syst
 
 
 ## Links
+* [Accepted Manuscript (open access)](https://arxiv.org/abs/2201.03061){:target="_blank"}
 * [Paper at ScienceDirect](https://doi.org/10.1016/j.infsof.2021.106800){:target="_blank"}
 
 
