Add journal volume numbers to IST'22 papers.

--- a/_pages/publications/2022-ISTa.md
+++ b/_pages/publications/2022-ISTa.md
@@ -5,7 +5,7 @@ layout: page
 ---
 
 ## Reference
-Arut Prakash Kaleeswaran, Arne Nordmann, Thomas Vogel, and Lars Grunske. "A Systematic Literature Review on Counterexample Explanation". In: Information and Software Technology (2022), p. 106800. DOI: 10.1016/j.infsof.2021.106800. _(Available online 30 December 2021)_.
+Arut Prakash Kaleeswaran, Arne Nordmann, Thomas Vogel, and Lars Grunske. "A Systematic Literature Review on Counterexample Explanation". In: Information and Software Technology 145 (2022), p. 106800. DOI: 10.1016/j.infsof.2021.106800. _(Available online 30 December 2021)_.
 
 
 ## Links
@@ -33,7 +33,7 @@ We notably see a lack of research on counterexample explanation that targets pro
   author = {Kaleeswaran, Arut Prakash and Nordmann, Arne and Vogel, Thomas and Grunske, Lars},
   title = {A Systematic Literature Review on Counterexample Explanation},
   journal = {Information and Software Technology},
-  volume = {},
+  volume = {145},
   year = {2022},
   pages = {106800},
   doi = {10.1016/j.infsof.2021.106800},
