--- a/_pages/publications/2022-ISTb.md
+++ b/_pages/publications/2022-ISTb.md
@@ -5,7 +5,7 @@ layout: page
 ---
 
 ## Reference
-Laura Wartschinski, Yannic Noller, Thomas Vogel, Timo Kehrer, and Lars Grunske. "<span style="font-variant:small-caps;">Vudenc</span>: Vulnerability Detection with Deep Learning on a Natural Codebase for Python". In: Information and Software Technology (2022), p. 106809. DOI: 10.1016/j.infsof.2021.106809. _(Available online 01 January 2022)_.
+Laura Wartschinski, Yannic Noller, Thomas Vogel, Timo Kehrer, and Lars Grunske. "<span style="font-variant:small-caps;">Vudenc</span>: Vulnerability Detection with Deep Learning on a Natural Codebase for Python". In: Information and Software Technology 144 (2022), p. 106809. DOI: 10.1016/j.infsof.2021.106809. _(Available online 01 January 2022)_.
 
 ## Links
 * [Paper at ScienceDirect](https://doi.org/10.1016/j.infsof.2021.106809){:target="_blank"}
@@ -30,7 +30,7 @@ Our experimental results suggest that <span style="font-variant:small-caps;">Vud
   author = {Wartschinski, Laura and Noller, Yannic and Vogel, Thomas and Kehrer, Timo and Grunske, Lars},
   title = {VUDENC: Vulnerability Detection with Deep Learning on a Natural Codebase for Python},
   journal = {Information and Software Technology},
-  volume = {},
+  volume = {144},
   year = {2022},
   pages = {106809},
   doi = {10.1016/j.infsof.2021.106809},
