Add links to data.

--- a/_pages/publications/2022-ISTa.md
+++ b/_pages/publications/2022-ISTa.md
@@ -11,6 +11,7 @@ Arut Prakash Kaleeswaran, Arne Nordmann, Thomas Vogel, and Lars Grunske. "A Syst
 ## Links
 * [Accepted Manuscript (open access)](https://arxiv.org/abs/2201.03061){:target="_blank"}
 * [Paper at ScienceDirect](https://doi.org/10.1016/j.infsof.2021.106800){:target="_blank"}
+* [Online Appendix](https://doi.org/10.5281/zenodo.5679227){:target="_blank"}
 
 
 ## Abstract
