--- a/_pages/publications/2022-ISTb.md
+++ b/_pages/publications/2022-ISTb.md
@@ -9,6 +9,11 @@ Laura Wartschinski, Yannic Noller, Thomas Vogel, Timo Kehrer, and Lars Grunske. 
 
 ## Links
 * [Paper at ScienceDirect](https://doi.org/10.1016/j.infsof.2021.106809){:target="_blank"}
+* [Code on GitHub](https://github.com/LauraWartschinski/VulnerabilityDetection){:target="_blank"}
+* [Python corpus for word2vec](https://doi.org/10.5281/zenodo.3559480){:target="_blank"}
+* [Dataset with diff files](https://doi.org/10.5281/zenodo.3559203){:target="_blank"}
+* [Datasets for vulnerabilities](https://doi.org/10.5281/zenodo.3559841){:target="_blank"}
+
 
 ## Abstract
 **Context:**
