Add arxiv link.

--- a/_pages/publications/2022-ISTb.md
+++ b/_pages/publications/2022-ISTb.md
@@ -1,5 +1,5 @@
 ---
-title: <span style="font-variant:small-caps;">Vudenc</span>&#058; Vulnerability Detection with Deep Learning on a Natural Codebase for Python
+title: Vudenc&#058; Vulnerability Detection with Deep Learning on a Natural Codebase for Python
 permalink: publications/2022-ISTb.html
 layout: page
 ---
@@ -8,6 +8,7 @@ layout: page
 Laura Wartschinski, Yannic Noller, Thomas Vogel, Timo Kehrer, and Lars Grunske. "<span style="font-variant:small-caps;">Vudenc</span>: Vulnerability Detection with Deep Learning on a Natural Codebase for Python". In: Information and Software Technology 144 (2022), p. 106809. DOI: 10.1016/j.infsof.2021.106809. _(Available online 01 January 2022)_.
 
 ## Links
+* [Accepted Manuscript (open access)](https://arxiv.org/abs/2201.08441){:target="_blank"}
 * [Paper at ScienceDirect](https://doi.org/10.1016/j.infsof.2021.106809){:target="_blank"}
 * [Code on GitHub](https://github.com/LauraWartschinski/VulnerabilityDetection){:target="_blank"}
 * [Python corpus for word2vec](https://doi.org/10.5281/zenodo.3559480){:target="_blank"}
