--- a/_pages/publications/2022-ISTb.md
+++ b/_pages/publications/2022-ISTb.md
@@ -1,5 +1,5 @@
 ---
-title: Vudenc&#058; Vulnerability Detection with Deep Learning on a Natural Codebase for Python
+title: VUDENC&#058; Vulnerability Detection with Deep Learning on a Natural Codebase for Python
 permalink: publications/2022-ISTb.html
 layout: page
 ---
