--- a/_pages/publications/2022-ISTc.md
+++ b/_pages/publications/2022-ISTc.md
@@ -1,11 +1,11 @@
 ---
-title: A property specification pattern catalog for real-time system verification with UPPAAL
+title: A Property Specification Pattern Catalog for Real-Time System Verification with UPPAAL
 permalink: publications/2022-ISTc.html
 layout: page
 ---
 
 ## Reference
-Thomas Vogel, Marc Carwehl, Genaína Nunes Rodrigues, and Lars Grunske. "A property specification pattern catalog for real-time system verification with UPPAAL". In: Information and Software Technology (2022), p. 107100. DOI: 10.1016/j.infsof.2022.107100. _(Available online 01 November 2022)_.
+Thomas Vogel, Marc Carwehl, Genaína Nunes Rodrigues, and Lars Grunske. "A Property Specification Pattern Catalog for Real-Time System Verification with UPPAAL". In: Information and Software Technology (2022), p. 107100. DOI: 10.1016/j.infsof.2022.107100. _(Available online 01 November 2022)_.
 
 ## Links
 * [Paper at ScienceDirect](https://doi.org/10.1016/j.infsof.2022.107100){:target="_blank"}
@@ -30,7 +30,7 @@ The proposed property specification pattern catalog for UPPAAL enables practitio
 <div class="bibtex">
 <pre>@article{2022-ISTc,
   author = {Vogel, Thomas and Carwehl, Marc and Rodrigues, Genaína Nunes and Grunske, Lars},
-  title = {A property specification pattern catalog for real-time system verification with UPPAAL},
+  title = {A Property Specification Pattern Catalog for Real-Time System Verification with UPPAAL},
   journal = {Information and Software Technology},
   volume = {},
   year = {2022},
