Add link to arxiv.org paper of 2022-ISTc and update PC memberships.

--- a/_pages/publications/2022-ISTc.md
+++ b/_pages/publications/2022-ISTc.md
@@ -8,6 +8,7 @@ layout: page
 Thomas Vogel, Marc Carwehl, Genaína Nunes Rodrigues, and Lars Grunske. "A Property Specification Pattern Catalog for Real-Time System Verification with UPPAAL". In: Information and Software Technology (2022), p. 107100. DOI: 10.1016/j.infsof.2022.107100. _(Available online 01 November 2022)_.
 
 ## Links
+* [Accepted Manuscript (open access)](https://arxiv.org/abs/2211.03817){:target="_blank"}
 * [Paper at ScienceDirect](https://doi.org/10.1016/j.infsof.2022.107100){:target="_blank"}
 * [Pattern catalog and code on GitHub](https://github.com/hub-se/PSP-UPPAAL){:target="_blank"}
 
