Add volume number and update year to 2023.

--- a/_pages/publications/2022-ISTc.md
+++ b/_pages/publications/2022-ISTc.md
@@ -5,7 +5,8 @@ layout: page
 ---
 
 ## Reference
-Thomas Vogel, Marc Carwehl, Genaína Nunes Rodrigues, and Lars Grunske. "A Property Specification Pattern Catalog for Real-Time System Verification with UPPAAL". In: Information and Software Technology (2022), p. 107100. DOI: 10.1016/j.infsof.2022.107100. _(Available online 01 November 2022)_.
+Thomas Vogel, Marc Carwehl, Genaína Nunes Rodrigues, and Lars Grunske. "A Property Specification Pattern Catalog for Real-Time System Verification with UPPAAL". In: Information and Software Technology 154 (2023), p. 107100. DOI: 10.1016/j.infsof.2022.107100. _(Available online 01 Nov 2022)_.
+
 
 ## Links
 * [Accepted Manuscript (open access)](https://arxiv.org/abs/2211.03817){:target="_blank"}
@@ -33,8 +34,8 @@ The proposed property specification pattern catalog for UPPAAL enables practitio
   author = {Vogel, Thomas and Carwehl, Marc and Rodrigues, Genaína Nunes and Grunske, Lars},
   title = {A Property Specification Pattern Catalog for Real-Time System Verification with UPPAAL},
   journal = {Information and Software Technology},
-  volume = {},
-  year = {2022},
+  volume = {154},
+  year = {2023},
   pages = {107100},
   doi = {10.1016/j.infsof.2022.107100},
   publisher = {Elsevier}
