--- a/_pages/projects/S3.md
+++ b/_pages/projects/S3.md
@@ -17,6 +17,10 @@ For further details, please have a look at the following presentation held at th
 
 <a href="https://www.tele-task.de/lecture/video/7788/" target="_blank"><img src="/assets/img/2019-FutureSOC-Video.png" alt="Video of the talk Search-Based App Testing, Fitness Landscape Analysis, and Diversity" style="width: 40%; margin-top: 1em; margin-left: 1em;"/></a>
 
+## Tool
+
+S3 is implemented in [<span style="font-variant:small-caps;">Sapienz</span><span style="font-style: italic;font-size:70%;vertical-align:super;">div</span>](https://github.com/thomas-vogel/sapienzdiv-ssbse19){:target="_blank"}.
+
 ## Publications
 * Thomas Vogel, Chinh Tran, and Lars Grunske. [_A Comprehensive Empirical Evaluation of Generating Test Suites for Mobile Applications with Diversity_](../publications/2020-IST). In: Information and Software Technology 130 (2021), p. 106436. _(Available online 25 September 2020)_.
 * Thomas Vogel, Chinh Tran, and Lars Grunske. [_Does Diversity Improve the Test Suite Generation for Mobile Applications?_](../publications/2019-SSBSE). In: 11th International Symposium on Search-Based Software Engineering. SSBSE '19. LNCS 11664. Springer, 2019, pp. 58--74.
